--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context.cs" />
+    <Compile Include="DynamicSpec.cs" />
     <Compile Include="Example.cs" />
     <Compile Include="AssertionExtensions.cs" />
     <Compile Include="Extensions.cs" />
