--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -44,11 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Array\spec.cs" />
     <Compile Include="Context.cs" />
     <Compile Include="DynamicSpec.cs" />
     <Compile Include="Example.cs" />
-    <Compile Include="AssertionExtensions.cs" />
-    <Compile Include="Extensions.cs" />
+    <Compile Include="Extensions\AssertionExtensions.cs" />
+    <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Finder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="spec.cs" />
