--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="array_approach.cs" />
     <Compile Include="nested_context.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sample.cs" />
