possible way to have array approach work using ActionRegister

--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Array\ActionRegister.cs" />
     <Compile Include="Array\spec.cs" />
     <Compile Include="Context.cs" />
     <Compile Include="DynamicSpec.cs" />
