--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -40,10 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="action_register_approach.cs" />
-    <Compile Include="nested_context.cs" />
+    <Compile Include="array_of_action_approach.cs" />
+    <Compile Include="method_approach.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sample.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NSpec\NSpec.csproj">
