--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="array_of_action_approach.cs" />
+    <Compile Include="action_indexer_approach.cs" />
     <Compile Include="method_approach.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sample.cs" />
