--- a/NSpecSpec/NSpecSpec.csproj
+++ b/NSpecSpec/NSpecSpec.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="when_exectuting_a_context.cs" />
     <Compile Include="when_executing_a_spec_method_directly.cs" />
     <Compile Include="when_finding_specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
