--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\Tuples.cs" />
     <Compile Include="Interpreter\Indexer\ActionIndexer.cs" />
     <Compile Include="Interpreter\Indexer\spec.cs" />
     <Compile Include="Domain\Context.cs" />
