--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="action_indexer_approach.cs" />
+    <Compile Include="prime_kata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
