--- a/NSpecSpec/NSpecSpec.csproj
+++ b/NSpecSpec/NSpecSpec.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="given_a_parent_context.cs" />
     <Compile Include="when_exectuting_a_context.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="when_nesting_contexts.cs" />
