--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Extensions\AssertionExtensions.cs" />
     <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Interpreter\SpecInterpreterBase.cs" />
+    <Compile Include="IReflector.cs" />
     <Compile Include="SpecFinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
