--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\ContextBuilder.cs" />
     <Compile Include="Interpreter\Indexer\Before.cs" />
     <Compile Include="Domain\Tuples.cs" />
     <Compile Include="Interpreter\Indexer\ActionIndexer.cs" />
@@ -55,7 +56,7 @@
     <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Interpreter\SpecInterpreterBase.cs" />
     <Compile Include="IReflector.cs" />
-    <Compile Include="SpecFinder.cs" />
+    <Compile Include="SpecFinder .cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
