--- a/NSpecNUnit/NSpecNUnit.csproj
+++ b/NSpecNUnit/NSpecNUnit.csproj
@@ -47,10 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContextBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecClass.cs" />
+    <Compile Include="when_building_contexts.cs" />
     <Compile Include="when_counting_failures.cs" />
     <Compile Include="when_finding_root_context.cs" />
-    <Compile Include="when_running_specs.cs" />
+    <Compile Include="when_finding_specs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NSpec\NSpec.csproj">
