--- a/NSpecNUnit/NSpecNUnit.csproj
+++ b/NSpecNUnit/NSpecNUnit.csproj
@@ -54,6 +54,7 @@
     <Compile Include="when_counting_failures.cs" />
     <Compile Include="when_finding_root_context.cs" />
     <Compile Include="when_finding_specs.cs" />
+    <Compile Include="when_getting_befores.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NSpec\NSpec.csproj">
