--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="BeforeFinder.cs" />
     <Compile Include="Domain\ContextBuilder.cs" />
+    <Compile Include="Domain\ContextBuilder2.cs" />
     <Compile Include="Interpreter\Indexer\Before.cs" />
     <Compile Include="Domain\Tuples.cs" />
     <Compile Include="Interpreter\Indexer\ActionIndexer.cs" />
