big refactoring. the last one methinks. now hopefully just add specs and extend behavior incrementally.

--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -45,8 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BeforeFinder.cs" />
+    <Compile Include="Domain\ContextRunner.cs" />
     <Compile Include="Domain\ContextBuilder.cs" />
-    <Compile Include="Domain\ContextBuilder2.cs" />
     <Compile Include="Interpreter\Indexer\Before.cs" />
     <Compile Include="Domain\Tuples.cs" />
     <Compile Include="Interpreter\Indexer\ActionIndexer.cs" />
