--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BeforeFinder.cs" />
+    <Compile Include="Domain\ConsoleFormatter.cs" />
     <Compile Include="Domain\ContextRunner.cs" />
     <Compile Include="Domain\ContextBuilder.cs" />
     <Compile Include="Interpreter\Indexer\Before.cs" />
