--- a/NSpecNUnit/NSpecNUnit.csproj
+++ b/NSpecNUnit/NSpecNUnit.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="when_building_contexts.cs" />
     <Compile Include="when_building_method_contexts.cs" />
+    <Compile Include="describe_method_level_befores.cs" />
     <Compile Include="when_counting_failures.cs" />
     <Compile Include="when_finding_specs.cs" />
     <Compile Include="when_creating_contexts_for_classes.cs" />
