--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Domain\ConsoleFormatter.cs" />
     <Compile Include="Domain\ContextRunner.cs" />
     <Compile Include="Domain\ContextBuilder.cs" />
-    <Compile Include="Interpreter\Indexer\Before.cs" />
+    <Compile Include="Domain\Before.cs" />
     <Compile Include="Tuples.cs" />
     <Compile Include="Domain\ActionIndexer.cs" />
     <Compile Include="spec.cs" />
