more namespace sorting

--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -54,7 +54,7 @@
     <Compile Include="spec.cs" />
     <Compile Include="Domain\Context.cs" />
     <Compile Include="Domain\Example.cs" />
-    <Compile Include="Extensions\AssertionExtensions.cs" />
+    <Compile Include="Assertions\AssertionExtensions.cs" />
     <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Domain\SpecInterpreterBase.cs" />
     <Compile Include="Domain\IReflector.cs" />
