--- a/NSpecNUnit/NSpecNUnit.csproj
+++ b/NSpecNUnit/NSpecNUnit.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="describe_pending_test.cs" />
+    <Compile Include="describe_todo_example.cs" />
     <Compile Include="describe_x_it.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="when_building_contexts.cs" />
