added + operator to action indexer, removed specify and xspecify, tests added for parsing expressions

--- a/NSpecNUnit/NSpecNUnit.csproj
+++ b/NSpecNUnit/NSpecNUnit.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="describe_action_indexer_add_operator.cs" />
     <Compile Include="describe_todo_example.cs" />
     <Compile Include="describe_x_it.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="when_finding_specs.cs" />
     <Compile Include="when_creating_contexts_for_classes.cs" />
     <Compile Include="when_formatting_console_output.cs" />
+    <Compile Include="when_parsing_expressions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NSpec\NSpec.csproj">
