--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Domain\ContextRunner.cs" />
     <Compile Include="Domain\ContextBuilder.cs" />
     <Compile Include="Domain\Before.cs" />
+    <Compile Include="Domain\Extensions\DomainExtensions.cs" />
     <Compile Include="Domain\PendingExampleException.cs" />
     <Compile Include="Tuples.cs" />
     <Compile Include="Domain\ActionIndexer.cs" />
