--- a/RakeFile
+++ b/RakeFile
@@ -53,13 +53,13 @@ def ensure_newline string
 end
 
 def code_markup file
-  out = "<pre id=\"#{class_for(file)}_code\" data-autogen-timestamp=\"#{Time.new.inspect}\" class=\"brush: csharp;\">"
+  out = "<pre id=\"#{class_for(file)}_code\" data-timestamp=\"#{Time.new.inspect}\" class=\"brush: csharp;\">"
   out += CGI::escapeHTML(`cat #{file}`)
   out += '</pre>'
 end
 
 def output_markup file
-  out = "<pre id=\"#{class_for(file)}_output\" data-autogen-timestamp=\"#{Time.new.inspect}\" style=\"font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;\">"
+  out = "<pre id=\"#{class_for(file)}_output\" data-timestamp=\"#{Time.new.inspect}\" style=\"font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;\">"
   out += CGI::escapeHTML(`nspecrunner/bin/debug/nspecrunner.exe samplespecs/bin/debug/samplespecs.dll #{class_for(file)}`.strip)
   out += '</pre>'
 end
