--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -48,12 +48,14 @@
     <Compile Include="Demo\prime_kata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Demo\User.cs" />
+    <Compile Include="Model\Car.cs" />
     <Compile Include="WebSite\describe_car.cs" />
     <Compile Include="WebSite\describe_Math.cs" />
     <Compile Include="WebSite\describe_PrimeFactors.cs" />
     <Compile Include="WebSite\multiple_befores.cs" />
     <Compile Include="WebSite\my_first_spec.cs" />
     <Compile Include="WebSite\my_second_spec.cs" />
+    <Compile Include="Model\PrimeFactors.cs" />
     <Compile Include="WebSite\simple_before.cs" />
   </ItemGroup>
   <ItemGroup>
