pushing responsibility for making sentences into the domain. now supporting camelcase

--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="describe_action_indexer_add_operator.cs" />
+    <Compile Include="describe_Context.cs" />
     <Compile Include="describe_expected_exception.cs" />
     <Compile Include="describe_implicit_befores.cs" />
     <Compile Include="describe_todo_example.cs" />
@@ -59,7 +60,7 @@
     <Compile Include="when_counting_failures.cs" />
     <Compile Include="when_finding_specs.cs" />
     <Compile Include="when_creating_contexts_for_classes.cs" />
-    <Compile Include="when_formatting_console_output.cs" />
+    <Compile Include="describe_ConsoleFormatter.cs" />
     <Compile Include="when_parsing_expressions.cs" />
   </ItemGroup>
   <ItemGroup>
