--- a/nspec.nuspec
+++ b/nspec.nuspec
@@ -2,13 +2,14 @@
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>nspec</id>
-    <version>0.9.4</version>
+    <version>0.9.8</version>
+    <iconUrl>http://nspecdriven.net/themes/contoso/content/images/logo.png</iconUrl>
+    <licenseUrl>https://github.com/mattflo/NSpec/blob/master/license.txt</licenseUrl>
     <authors>Matt Florence, Amir Rajan</authors>
     <owners>Matt Florence, Amir Rajan</owners>
-    <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
     <projectUrl>http://www.nspecdriven.net</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A testing framework that allows you to write BDD tests.</description>
+    <description>NSpec is a BDD unit testing framework using the context/specification style built for .NET developers. NSpec is heavily inspired by RSpec and built upon the NUnit assertion library.</description>
     <language>en-US</language>
     <tags>testing, bdd, tdd</tags>
   </metadata>
