--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Formatting\when_formatting_failure_summary.cs" />
     <Compile Include="describe_ContextCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="when_act_contains_exception.cs" />
+    <Compile Include="when_after_contains_exception.cs" />
+    <Compile Include="when_before_contains_exception.cs" />
     <Compile Include="when_building_contexts.cs" />
     <Compile Include="when_building_method_contexts.cs" />
     <Compile Include="describe_method_level_befores.cs" />
