--- a/RakeFile
+++ b/RakeFile
@@ -1,8 +1,18 @@
 require 'nokogiri'
 require 'cgi'
 
+desc 'build'
+task :build do
+  sh 'C:\Windows\Microsoft.NET\Framework\v4.0.30319\MSBuild.exe NSpec.sln'
+end
+
+desc 'test'
+task :test => :build do
+  sh '"C:\program files (x86)\nunit 2.5.9\bin\net-2.0\nunit-console-x86.exe" NSpecSpecs/bin/Debug/NSpecSpecs.dll'
+end
+
 desc 'create and upload a nuget package. requires deploy.bat with secure hash to be in your path. DOES NOT autoincrement version number.'
-task :nuget do
+task :nuget => :test do
 
   xml = Nokogiri::XML(File.read 'nspec.nuspec')
   xml.root.default_namespace = "http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd"
@@ -27,7 +37,7 @@ task :samples, :spec do |t,args|
 end
 
 desc 'supply the current tutorial markup in source.html and generate new.html containing current source code and output'
-task :website do
+task :website => :test do
   if File.exists? 'source.html'
     @doc = Nokogiri::HTML.fragment(File.read 'source.html')
 
