--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -47,10 +47,12 @@
     <Compile Include="Demo\inherited_spec_class.cs" />
     <Compile Include="Demo\prime_kata.cs" />
     <Compile Include="Demo\todo_example.cs" />
+    <Compile Include="Model\TicTacToeGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Demo\User.cs" />
     <Compile Include="Model\Car.cs" />
     <Compile Include="WebSite\class_level_before.cs" />
+    <Compile Include="WebSite\decribe_TicTacToeGame.cs" />
     <Compile Include="WebSite\describe_car.cs" />
     <Compile Include="WebSite\describe_Math.cs" />
     <Compile Include="WebSite\describe_PrimeFactors.cs" />
