--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -47,30 +47,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="describe_action_indexer_add_operator.cs" />
+    <Compile Include="WhenRunningSpecs\describe_action_indexer_add_operator.cs" />
     <Compile Include="describe_Context.cs" />
     <Compile Include="describe_Example.cs" />
-    <Compile Include="describe_expected_exception.cs" />
-    <Compile Include="describe_implicit_befores.cs" />
-    <Compile Include="describe_todo.cs" />
+    <Compile Include="WhenRunningSpecs\describe_expected_exception.cs" />
+    <Compile Include="WhenRunningSpecs\describe_implicit_befores.cs" />
+    <Compile Include="WhenRunningSpecs\describe_todo.cs" />
     <Compile Include="Formatting\when_formatting_a_failure.cs" />
     <Compile Include="Formatting\when_formatting_examples.cs" />
     <Compile Include="Formatting\when_formatting_exceptions.cs" />
     <Compile Include="Formatting\when_formatting_failure_summary.cs" />
     <Compile Include="describe_ContextCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="when_act_contains_exception.cs" />
-    <Compile Include="when_after_contains_exception.cs" />
-    <Compile Include="when_before_contains_exception.cs" />
+    <Compile Include="WhenRunningSpecs\when_act_contains_exception.cs" />
+    <Compile Include="WhenRunningSpecs\when_after_contains_exception.cs" />
+    <Compile Include="WhenRunningSpecs\when_before_contains_exception.cs" />
     <Compile Include="when_building_contexts.cs" />
     <Compile Include="when_building_method_contexts.cs" />
-    <Compile Include="describe_method_level_befores.cs" />
+    <Compile Include="WhenRunningSpecs\describe_method_level_befores.cs" />
     <Compile Include="when_counting_failures.cs" />
     <Compile Include="when_finding_specs.cs" />
     <Compile Include="when_creating_contexts_for_classes.cs" />
     <Compile Include="Formatting\describe_ConsoleFormatter.cs" />
     <Compile Include="when_parsing_expressions.cs" />
-    <Compile Include="when_running_specs.cs" />
+    <Compile Include="WhenRunningSpecs\when_running_specs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NSpec\NSpec.csproj">
