--- a/RakeFile
+++ b/RakeFile
@@ -13,12 +13,7 @@ end
 
 desc 'create and upload a nuget package. requires deploy.bat with secure hash to be in your path. DOES NOT autoincrement version number.'
 task :nuget => :spec do
-
-  xml = Nokogiri::XML(File.read 'nspec.nuspec')
-  xml.root.default_namespace = "http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd"
-  node =  xml.root.xpath('//xmlns:version')[0]
-
-  nextVer = "0.9." + (node.text.split('.').last.to_i + 1).to_s
+  nextVer = "0.9." + (get_version.split('.').last.to_i + 1).to_s
 
   node.inner_html = nextVer
 
@@ -27,6 +22,12 @@ task :nuget => :spec do
   Dir['nspec*{nupkg}'].each {|f| File.delete(f)}
   sh 'nuget.exe pack nspec.nuspec'
   sh "deployNuget.bat #{Dir['*{nupkg}'][0]}"
+end
+
+def get_version
+  xml = Nokogiri::XML(File.read 'nspec.nuspec')
+  xml.root.default_namespace = "http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd"
+  xml.root.xpath('//xmlns:version')[0].text
 end
 
 desc 'run SampleSpecs with NSpecRunner. you can supply a single spec like so -> rake samples[spec_name]'
@@ -42,6 +43,14 @@ task :website => :spec do
     @doc = Nokogiri::HTML.fragment(File.read 'source.html')
 
     Dir['SampleSpecs/WebSite/**/*.*'].each {|f| run f}
+
+    t = Time.now
+
+    time = t.strftime("on %m/%d/%Y") + t.strftime(" at %I:%M%p")
+    
+    timestamp = "Sample code and output automatically executed against nspec version #{get_version} #{time}"
+
+    @doc.at('#timestamp').inner_html = timestamp
 
     File.open('new.html', 'w') {|f| f.write(@doc) } 
   else
