--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -57,12 +57,12 @@
     <Compile Include="WebSite\describe_car.cs" />
     <Compile Include="WebSite\describe_Math.cs" />
     <Compile Include="WebSite\describe_pending.cs" />
-    <Compile Include="WebSite\describe_PrimeFactors.cs" />
+    <Compile Include="WebSite\describe_Prime.cs" />
     <Compile Include="WebSite\describe_specifications.cs" />
     <Compile Include="WebSite\multiple_befores.cs" />
     <Compile Include="WebSite\my_first_spec.cs" />
     <Compile Include="WebSite\my_second_spec.cs" />
-    <Compile Include="Model\PrimeFactors.cs" />
+    <Compile Include="Model\Prime.cs" />
     <Compile Include="WebSite\simple_before.cs" />
   </ItemGroup>
   <ItemGroup>
